# GameEngine

./: .gitignore  CMakeLists.txt  Camera.h  CollisionSystem.h  Events.h  GameEngine.h  GameScene.h  README.en.md  README.md  Scene.h  SceneContext.h  World.h  WorldContext.h  main.cpp
Components/: CameraComponent.h  Controller.h  GravityComponent.h  MoveComponent.h
Components/CollisionHandles/: BoxCollisionHandle.h  CircleCollisionHandle.h  CollisionHandle.h
Components/Collisions/: BoxCollision.cpp  BoxCollision.h  CircleCollision.cpp  CircleCollision.h  Collision.h
GameObjects/: BoxGameObject.h  GameObject.h  Ground.h  Player.h  World.h
src/: Animation.h  AnimationManager.h  AssetManager.h  Camera.h  CollisionSystem.h  EventBus.h  Events.h  FrameManager.h  GameEngine.h  ModelManager.h  SimpleNetwork.h  Timer.h  main.cpp
src/Asset/SuperMario/source/data/player/: mario.json
src/Components/: CameraComponent.h  Component.h  Controller.h  GravityComponent.h  MarioCameraComponent.h  MarioController.h  MoveComponent.h
src/Components/CollisionHandles/: BoxCollisionHandle.h  CollisionHandle.h
src/Components/Collisions/: BoxCollision.cpp  BoxCollision.h  CircleCollision.cpp  CircleCollision.h  Collision.h
src/GameObjects/: BoxGameObject.h  Button.h  Circle.h  Cube.h  GameObject.h  Ground.h  Human.h  Human3D.h  Mario.h  Model.h  NewModel.h  NewModel3D.h  Penguin.h  Penguin3D.h  Player.h
src/Manager/: AssetManager.h  FrameManager.cpp  FrameManager.h  SceneManager.h
src/Scene/: GameScene.h  GameScene3D.h  MenuScene.h  Scene.h  SceneContext.h  SuperMarioScene.h
src/State/: BaseState.h  MarioIdleState.h  MarioJumpState.h  MarioRunState.h  StateMachine.h
